Thu Oct 18 01:41:41 BST 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pathsearch.c, src/man.c, src/mandb.c, src/manp.c: Include
	  "xgetcwd.h" rather than <xgetcwd.h>, as suggested by gnulib-tool.

Thu Oct 18 01:37:22 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (cat_manpath): Whitespace adjustments.

Thu Oct 18 01:15:25 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c: PIPE_BUF is no longer used, so don't define it.

Wed Oct 17 22:34:32 BST 2007  Colin Watson  <cjwatson@debian.org>

	* gnulib/lib/minmax.h, gnulib/m4/minmax.m4: Import the Gnulib minmax
	  module.
	* src/man.c (duplicate_candidates): Use it.
	* src/util.c: Remove unused definition of MAX.

	Regenerate all build system files. (Future ChangeLog entries will
	not mention this.)

Wed Oct 17 22:22:25 BST 2007  Colin Watson  <cjwatson@debian.org>

	* gnulib/lib/strerror.c, gnulib/m4/strerror.m4: Import the Gnulib
	  strerror module.

	Regenerate all build system files.

Wed Oct 17 21:05:50 BST 2007  Colin Watson  <cjwatson@debian.org>

	Use the Gnulib portability library.

	* lib/alloca.c, lib/basename.c, lib/error.c, lib/error.h,
	  lib/fnmatch.c, lib/fnmatch_.h, lib/getcwdalloc.c,
	  lib/getcwdalloc.h, lib/getopt.c, lib/getopt1.c, lib/getopt_.h,
	  lib/glob.c, lib/glob_.h, lib/memcmp.c, lib/mkdtemp.c,
	  lib/mkstemp.c, lib/putenv.c, lib/realpath.c, lib/rename.c,
	  lib/setenv.c, lib/setenv.h, lib/strcspn.c, lib/strnlen.c,
	  lib/strsep.c, lib/tempname.c, lib/unsetenv.c, lib/xmalloc.c,
	  lib/xstrdup.c, lib/xstrndup.c, m4/man-fnmatch.m4, m4/setenv.m4,
	  m4/tempname.m4: Remove.
	* gnulib/*, tools/link-warning.h: Import atexit, canonicalize,
	  dirname, error, fnmatch-gnu, getopt, glob, memcmp, mkdtemp,
	  mkstemp, regex, rename, setenv, strcspn, strsep, sys_select,
	  xalloc, xgetcwd, and xstrndup modules.
	* .bzrignore: Update.
	* Makefile.am (SUBDIRS): Build gnulib/lib.
	  (ACLOCAL_AMFLAGS): Add -I gnulib/m4.
	* autogen.sh: Add gnulib-tool --update.