@@ -1,3 +1,8 @@
+Thu Oct 18 01:51:06 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/wrapper.c: Include "config.h" right at the top and with a
+	  HAVE_CONFIG_H guard, like other files.
+
 Thu Oct 18 01:41:41 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pathsearch.c, src/man.c, src/mandb.c, src/manp.c: Include
